Fixed text-align, added _blank to a link

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -283,7 +283,6 @@ a:active {
     width: 70%;
     margin-left: 15%;
     margin-right: 15%;
-    text-align: justify;
 }
 
 /* -------- SKILLS SECTION --------- */
